files/manifests/kuard/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - name: kuard
          image: jovalle/kuard:v0.10.1
          ports:
            - containerPort: 8080
