files/manifests/kuard/service-lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: kuard-lb
spec:
  selector:
    app: kuard
  ports:
    - port: 8080
      protocol: TCP
  type: LoadBalancer
