files/manifests/kuard/ingress-lb.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kuard-lb
spec:
  rules:
    - host: kuard-lb.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard-lb
                port:
                  number: 8080
